// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ReportingSetProto";

// Represents a binary set expression.
message SetExpression {
  // Operation of binary set expression.
  enum Operation {
    // Default value. This value is unused.
    OPERATION_UNSPECIFIED = 0;
    // The set union operation.
    UNION = 1;
    // The set difference operation.
    DIFFERENCE = 2;
    // The set intersection operation.
    INTERSECTION = 3;
  }
  // The operation of binary set expression that will be applied on the
  // operands.
  Operation operation = 1 [(google.api.field_behavior) = REQUIRED];

  // The object of a set operation.
  message Operand {
    oneof operand {
      // Resource name of a `PrimitiveReportingSet` describing a set operand.
      string primitive_reporting_set = 1
          [(google.api.resource_reference).type =
               "reporting.halo-cmm.org/PrimitiveReportingSet"];
      // Resource name of a `CompositeReportingSet` describing a set operand.
      string composite_reporting_set = 2
          [(google.api.resource_reference).type =
               "reporting.halo-cmm.org/CompositeReportingSet"];
      // Nested `SetExpression` to allow for expressions with more terms.
      SetExpression expression = 3;
    }
  }

  // Left-hand side operand of the operation.
  Operand lhs = 3 [(google.api.field_behavior) = REQUIRED];
  // Right-hand side operand of the operation. If not specified, implies the
  // empty set.
  Operand rhs = 4;
}

// Resource that describes a set of events that share a common filter. It's the
// minimum building block of a set expression.
message PrimitiveReportingSet {
  option (google.api.resource) = {
    type: "reporting.halo-cmm.org/PrimitiveReportingSet"
    pattern: "measurementConsumers/{measurement_consumer}/primitiveReportingSet/{primitive_reporting_set}"
  };

  // Resource name.
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // Human-readable name for display purposes.
  string display_name = 2;

  // CEL filter predicate that applies to all `event_groups`.
  //
  // If unspecified, evaluates to `true`.
  string filter = 3 [(google.api.field_behavior) = IMMUTABLE];

  // Set of EventGroup resource names.
  repeated string event_groups = 4 [
    (google.api.resource_reference).type = "reporting.halo-cmm.org/EventGroup",
    (google.api.field_behavior) = REQUIRED,
    (google.api.field_behavior) = IMMUTABLE
  ];
}

// Resource that describes a set expression with a event filter. It's a
// composite of `PrimitiveReportingSet`, `CompositeReportingSet`, and
// `SetExpression`.
message CompositeReportingSet {
  option (google.api.resource) = {
    type: "reporting.halo-cmm.org/CompositeReportingSet"
    pattern: "measurementConsumers/{measurement_consumer}/compositeReportingSet/{composite_reporting_set}"
  };

  // Resource name.
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // Human-readable name for display purposes.
  string display_name = 2;

  // CEL filter predicate that applies to all `event_groups` included in the set
  // expression.
  // If unspecified, evaluates to `true`.
  string filter = 3 [(google.api.field_behavior) = IMMUTABLE];

  // A nested expression of binary set expressions.
  SetExpression expression = 4 [(google.api.field_behavior) = REQUIRED];
}

// The resource name of a reporting set which is either primitive or composite.
message ReportingSet {
  oneof type {
    // The resource name of a primitive reporting set.
    string primitive_reporting_set = 1;
    // The resource name of a composite reporting set.
    string composite_reporting_set = 2;
  }
}
